updated test file

--- a/triangleTest/triangleTest.csproj
+++ b/triangleTest/triangleTest.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\assignment2_tri\assignment2_tri.csproj">
+      <Project>{6330243f-df36-49ab-bed2-9f0121f7686e}</Project>
+      <Name>assignment2_tri</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
